dnl Process this file with autoconf to produce a configure script.
AC_INIT(guasi, 0.25)
AM_INIT_AUTOMAKE(guasi, 0.25)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

CFLAGS="${CFLAGS=}"

dnl Checks for libraries.

dnl Checks for header files.
AC_STDC_HEADERS
AC_CHECK_HEADERS(stdio.h limits.h inttypes.h sys/types.h unistd.h fcntl.h sys/socket.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_C_VOLATILE
AC_C_CONST
AC_C_BIGENDIAN

dnl Checks for library functions.
AC_CHECK_FUNCS(memset memcmp memchr memcpy strlen malloc free realloc)
AC_CHECK_FUNCS(open read write pread pwrite fsync sendfile connect recv send)
AC_CHECK_FUNCS(recvfrom sendto opendir readdir stat fstat)


AC_OUTPUT(Makefile src/Makefile man/Makefile test/Makefile)

